--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "Cafe game stadium",
   "icons": [
     {
-      "src": "assets/icon/favicon.png",
+      "src": "assets/images/gold-logo.jpg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "assets/icon/icon.png",
+      "src": "assets/images/gold-logo.jpg.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
